--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,49 +13,90 @@
         android:orientation="vertical"
         >
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="10dp"
-            android:layout_marginVertical="20dp"
-            android:layout_marginHorizontal="10dp"
-            android:outlineSpotShadowColor="@color/secondary"
-            android:outlineAmbientShadowColor="@color/secondary"
+
+        <LinearLayout
+            style="@style/width_match"
+            android:background="@color/primary"
+            android:padding="10dp"
             >
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserratmedium"
-            android:hint="Search"
-            android:inputType="text"
-            android:background="@color/white"
-            android:maxLines="1"
-            android:padding="15dp"
-            android:drawableEnd="@drawable/baseline_search_24"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
-        </androidx.cardview.widget.CardView>
+        <TextView
+            style="@style/all_wrap"
+            android:text="Where do you want to go in Ilocus Sur?"
+            android:textColor="@color/background"
+            android:textSize="14sp"
+            android:layout_marginTop="10dp"
+        />
+
+<!--            Search Button-->
+            <LinearLayout
+                style="@style/width_match"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingVertical="15dp"
+                android:paddingHorizontal="10dp"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/container"
+                android:orientation="horizontal"
+                >
+                <ImageView
+                    android:id="@+id/menu"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:src="@drawable/search"
+                    app:tint="@color/info" />
 
 
+                <EditText
+                    style="@style/width_match"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:hint="Search Places here"
+                    android:textColorHint="@color/info"
+                    android:background="@android:color/transparent"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+        <!--        Categories-->
+
+        <TextView
+            style="@style/all_wrap"
+            android:text="Categories"
+            android:textSize="14sp"
+            android:padding="10dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            />
+
+
+<!--    Categories Recycler View-->
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginStart="5dp"
             android:id="@+id/rec_categories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            />
 
-        </androidx.recyclerview.widget.RecyclerView>
 
+
+
+<!--        Visible gone muna for changhes-->
         <androidx.recyclerview.widget.RecyclerView
+            android:visibility="gone"
             android:id="@+id/rec_places"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginHorizontal="10dp"
-            >
+            />
 
-        </androidx.recyclerview.widget.RecyclerView>
+
 
 
 
