--- a/app/src/main/res/layout/recycler_categories.xml
+++ b/app/src/main/res/layout/recycler_categories.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
+    android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:layout_marginBottom="5dp"
-    android:layout_marginHorizontal="7dp"
-
+    android:layout_marginHorizontal="8dp"
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
@@ -15,13 +14,11 @@
         android:orientation="vertical"
         >
 
-
-
     <!-- Image of groupPage-->
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:padding="2dp"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
@@ -44,7 +41,7 @@
         android:text="Restaurant"
         android:textAlignment="center"
         android:fontFamily="@font/montserratmedium"
-        android:textSize="14sp"
+        android:textSize="10sp"
         />
 
     </LinearLayout>
